--- a/res/values/dropbox.xml
+++ b/res/values/dropbox.xml
@@ -23,6 +23,6 @@ You should have received a copy of the GNU General Public License along with Tod
 @copyright 2009-2013 Todo.txt contributors (http://todotxt.com)
 -->
 <resources>
-    <string name="dropbox_consumer_key">gdb3yesuszz3bk8</string>
-    <string name="dropbox_consumer_secret">6np5yqalilylpc0</string>
+    <string name="dropbox_consumer_key">1w4c3tyonxdyfvk</string>
+    <string name="dropbox_consumer_secret">2ru4rrctvg6m39j</string>
 </resources>
